Lil bit of animation

--- a/src/app/components/pages/home-page/home-page.component.scss
+++ b/src/app/components/pages/home-page/home-page.component.scss
@@ -49,4 +49,8 @@
 
 .call-to-action {
     font-weight: bold;
+    animation: Grow 2s ease 0s infinite;
+    &:hover {
+        animation:none;
+    }
 }
