--- a/src/app/components/pages/home-page/home-page.component.html
+++ b/src/app/components/pages/home-page/home-page.component.html
@@ -16,7 +16,7 @@
             </p>
         </div>
         <div class="call-to-action">
-            <app-button color="primary">More about me</app-button>
+            <app-button>More about me</app-button>
         </div>
     </div>
 </div>
