--- a/src/app/components/pages/home-page/home-page.component.scss
+++ b/src/app/components/pages/home-page/home-page.component.scss
@@ -49,6 +49,7 @@
 
 .call-to-action {
     font-weight: bold;
+    color: var(--color-secondary);
     animation: Grow 2s ease 0s infinite;
     &:hover {
         animation:none;
