--- a/src/styles/themes/blue-theme-light.scss
+++ b/src/styles/themes/blue-theme-light.scss
@@ -2,5 +2,27 @@
     --color-primary: #03045e ;
     --color-secondary: #f1f2f6 ;
     --color-accent: #a40606 ;
+    --color-tertiary: #ffba08;
+
+    // --color-primary:  #0f38ab;
+    // --color-secondary:  #fffdfa ;
+    // --color-accent: #b72c7a;
+    // --color-tertiary: #ffba08;
+
+
+    // --color-primary:  #e5b834;
+    // --color-secondary:  #131228 ;
+    // --color-accent: #eb4200;
+    // --color-tertiary: #ffba08;#f67031
+
+    --color-primary: #2c2f4c ;
+    --color-secondary:   #daf2f6;
+    --color-accent:  #e95132;
+    --color-tertiary: #ffba08;
+
+    // --color-primary: #433d8d ;
+    // --color-secondary: #20aadf;
+    // --color-accent:  #f4a627;
+    // --color-tertiary: #ffba08;
 }
 
