--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 .main-container {
     height: 100dvh;
+    font-family: "Inter", "sans-serif";
+    color: var(--color-primary);
 }
 
 .navbar {
@@ -10,4 +12,5 @@
     height: calc(100% - 112px);
     overflow-x: hidden;
     overflow-y: auto;
+    position: relative;
 }
