--- a/src/app/components/ui/button/button.component.scss
+++ b/src/app/components/ui/button/button.component.scss
@@ -4,7 +4,11 @@
     border-radius: 8px;
     cursor: pointer;
     font-weight: inherit;
+    font-size: inherit;
+    font-family: inherit;
     transition: all .3s;
+    color: inherit;
+    background: none;
 }
 .button:hover{
     opacity: .8;  
@@ -13,15 +17,12 @@
 
 .button-primary {
     background-color: var(--color-primary);
-    color: var(--color-secondary);  
 }   
 
 .button-secondary {
     background-color: var(--color-secondary);
-    color: var(--color-primary);  
 }   
 
 .button-accent {
     background-color: var(--color-accent);
-    color: var(--color-secondary);  
 }   
