--- a/src/app/components/ui/navbar/navbar.component.html
+++ b/src/app/components/ui/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <div class="navbar">
-    <div class="ztk">
+    <a routerLink="home" class="ztk">
         <img src="../../../../assets/images/mon_logo.svg" alt="ztk-logo" class="ztk--logo">
-    </div>
+    </a>
     <div class="navbar-menus">
-        <div class="navbar-menu" *ngFor="let menu of menus">
+        <a class="navbar-menu" *ngFor="let menu of menus" [routerLink]="menu.toUrl">
             <app-button>{{menu.name}}</app-button>
-        </div>
-    </div>
+        </a> 
+    </div> 
 </div>
