--- a/src/app/components/pages/about-page/about-page.component.html
+++ b/src/app/components/pages/about-page/about-page.component.html
@@ -36,8 +36,22 @@
     </div>
 </div>
 
+
 <div class="interests">
+    <div class="interests-heading">
+        <p class="interests-title">Interests</p>
+        <p class="interests-subtitle">Better not get me started about those...</p>
+    </div>
+
+    <div class="cards"
+    [ngStyle]="{'--slot-left': cardSlotsCoordinates?.left, '--slot-middle': cardSlotsCoordinates?.middle, '--slot-right': cardSlotsCoordinates?.right}">
+        <div class="card" *ngFor="let card of cards ; let i = index"  (click)="scrollCards(i)">
+            <app-card [data]="card"></app-card>
+        </div>
+    </div>
 </div>
+
+<div class="footer"></div>
 
 <ng-template #rightArrow>
     <svg fill="currentColor" height="24px" width="24px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
