--- a/src/styles/themes/blue-theme-light.scss
+++ b/src/styles/themes/blue-theme-light.scss
@@ -13,7 +13,7 @@
     // --color-primary:  #e5b834;
     // --color-secondary:  #131228 ;
     // --color-accent: #eb4200;
-    // --color-tertiary: #ffba08;#f67031
+    // --color-tertiary: #f67031;
 
     --color-primary: #2c2f4c ;
     --color-secondary:   #daf2f6;
