--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,15 +2,17 @@
     height: 100dvh;
     font-family: "Inter", "sans-serif";
     color: var(--color-primary);
+    --navbar-height: 112px;
 }
 
 .navbar {
-    height: 112px;
+    height: var(--navbar-height);
 }
 
 .page-content {
-    height: calc(100% - 112px);
+    height: calc(100% - var(--navbar-height));
     overflow-x: hidden;
     overflow-y: auto;
     position: relative;
+    scroll-snap-type: y proximity;
 }
