--- a/src/app/components/ui/card/card.component.html
+++ b/src/app/components/ui/card/card.component.html
@@ -1,6 +1,8 @@
 <div class="main-content">
-    <img class="image" [src]="data.imageUrl" alt="ILLUSTRATION">   
-    <p class="heading">{{data.heading}}</p> 
+    <div class="image-container">
+        <img class="image" [src]="data.imageUrl" alt="ILLUSTRATION">
+    </div>
+    <p class="heading">{{data.heading}}</p>
     <p class="details">{{data.details}}</p>
     <app-button class="read-more">Read More</app-button>
 </div>
