--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,5 +7,14 @@
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
+}
 
+
+.absolute-center {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
 }
