--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="main-container" data-theme="blue-theme-light">
-    <div class="navbar">
+    <nav class="navbar">
         <app-navbar [menus]="navbarMenus"></app-navbar>
-    </div>
+    </nav>
     <div class="page-content">
         <router-outlet></router-outlet>
     </div>
