--- a/src/app/components/ui/navbar/navbar.component.scss
+++ b/src/app/components/ui/navbar/navbar.component.scss
@@ -1,29 +1,108 @@
-.navbar {
+.top-container {
+    display: inline;
+    font-weight: bold;
+    color: var(--color-secondary);
+}
+.main-container {
     position: relative;
     background: var(--color-primary);
     height: 100%;
-    text-align: center;
-    font-weight: bold;
     display: flex;
     align-items: center;
-    padding: 16px 72px 16px 72px;
-
+    padding: 1rem 3rem;
+    z-index: 100;
+    overflow: hidden;
 }
 
-.ztk {
+.ztk-logo {
     height: 100%;
+    aspect-ratio: 1;
 }
-.ztk--logo {
+.ztk-logo--image {
+    object-fit: contain;
     height: 100%;
-    object-fit: cover;
+    width: 100%;
 }
-.navbar-menus {
+
+.horizontal-menu {
     display: flex;
-    column-gap: 8px;
     margin-left: auto;
+    list-style: none;
+    gap: 2rem;
 
 }
 
-.navbar-menu {
+a {
+    display: inline-block;
+}
+
+
+.hamburger-menu {
+    list-style: none;
+    height: calc(100dvh - 100%);
+    width: 100%;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+    padding: 1rem 1rem 3rem 1rem;
+    background-color: rgb(from var(--color-primary) r g b / .97);
+    position: relative;
+    transform: translateY(-100%);
+    transition: transform .25s;
+    z-index: 99;
+}
+
+.hamburger-menu-trigger {
+    display: none;
+    margin-left: auto;
+    background: none;
+    border: none;
     color: var(--color-secondary);
+    cursor: pointer;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+
+.absolute-center {
+    width: auto;
+    height: auto;
+}
+
+.hamburger-menu--open-trigger {
+    transition: transform .25s;
+}
+
+.hamburger-menu--close-trigger  {
+    transform: scale(0);
+    transition: transform .125s;
+}
+
+.hamburger-menu__opened .hamburger-menu--open-trigger {
+    transform: translateY(calc(50% + calc(var(--navbar-height) / 2))) scale(0);
+}
+
+.hamburger-menu__opened .hamburger-menu--close-trigger {
+    transform: scale(1);
+}
+
+.hamburger-menu__opened .hamburger-menu {
+    transform: translateX(0px);
+}
+
+
+
+@media (max-width: 640px) {
+    .horizontal-menu {
+        display: none;
+    }
+    .hamburger-menu {
+        display: flex;
+    }
+    .hamburger-menu-trigger {
+        display: block;
+    }
+    
 }
