--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,20 @@
     left: 50%;
     translate: -50% -50%;
 }
+
+a {
+    transition: all .3s;
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover{
+    opacity: .8;  
+    transform:  scale(1.05);
+}
+
+button {
+    cursor: pointer;
+    border: none;
+    background: none;
+}
