Cards + infinite scroller

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@
     height: 100dvh;
     font-family: "Inter", "sans-serif";
     color: var(--color-primary);
-    --navbar-height: 112px;
+    --navbar-height: 5rem;
 }
 
 .navbar {
