--- a/src/app/components/features/infinite-scroller/infinite-scroller.component.html
+++ b/src/app/components/features/infinite-scroller/infinite-scroller.component.html
@@ -1,3 +1,11 @@
-<div id="container">
-    <ng-content></ng-content>
+<button class="nav-button nav-left" (click)="oneUnitScroll(-1)" type="button">
+    <fa-icon [icon]="['fas', 'circle-chevron-left']"></fa-icon>
+</button>
+<button class="nav-button nav-right" (click)="oneUnitScroll(1)" type="button">
+    <fa-icon [icon]="['fas', 'circle-chevron-right']"></fa-icon>
+</button>
+
+<div class="scroller-content" [style.gridAutoColumns]="columnsWidth">
+    <ng-container *ngTemplateOutlet="contentTemplateRef"></ng-container>
+    <ng-container *ngTemplateOutlet="contentTemplateRef"></ng-container>
 </div>
