--- a/src/app/components/pages/about-page/about-page.component.html
+++ b/src/app/components/pages/about-page/about-page.component.html
@@ -1,17 +1,18 @@
-
 <div class="interests">
     <div class="interests-heading">
         <p class="interests-title">Interests</p>
         <p class="interests-subtitle">Better not get me started about those...</p>
     </div>
 
-    <div class="cards">
-        <app-infinite-scroller>
-            <div class="card" *ngFor="let card of cards">
-                <app-card [data]="card"></app-card>
+    <app-infinite-scroller class="cards" [columnsWidth]="'18rem'">
+        <ng-template #contentTemplate>
+            <div class="card-container" *ngFor="let card of cards">
+                <div class="card">
+                    <app-card [data]="card"></app-card>
+                </div>
             </div>
-        </app-infinite-scroller>
-    </div>
+        </ng-template>
+    </app-infinite-scroller>
 
     <!-- <div class="cards"
     [ngStyle]="{'--slot-left': cardSlotsCoordinates?.left, '--slot-middle': cardSlotsCoordinates?.middle, '--slot-right': cardSlotsCoordinates?.right}">
@@ -25,19 +26,10 @@
     </div> -->
 </div>
 
-<div class="footer"></div>
+<div class="footer">
+    <div class="p">
+        <div class="c1">def Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione ipsa numquam mollitia, eum veniam? Consectetur illum architecto deserunt animi repellat commodi, corrupti, voluptates omnis perspiciatis dolores fugiat distinctio temporibus iste eos explicabo. Ad quisquam vero similique repellat aliquam, alias nobis, accusamus facilis esse, necessitatibus ea! Ad ducimus asperiores repudiandae.</div>
+        <!-- <div class="c2">ghijklmnop</div> -->
 
-<ng-template #rightArrow>
-    <svg fill="currentColor" height="24px" width="24px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 490.4 490.4" xml:space="preserve" class="right-arrow">
-        <g>
-            <g>
-                <path d="M245.2,490.4c135.2,0,245.2-110,245.2-245.2S380.4,0,245.2,0S0,110,0,245.2S110,490.4,245.2,490.4z M245.2,24.5
-    			c121.7,0,220.7,99,220.7,220.7s-99,220.7-220.7,220.7s-220.7-99-220.7-220.7S123.5,24.5,245.2,24.5z"/>
-                <path d="M138.7,257.5h183.4l-48,48c-4.8,4.8-4.8,12.5,0,17.3c2.4,2.4,5.5,3.6,8.7,3.6s6.3-1.2,8.7-3.6l68.9-68.9
-    			c4.8-4.8,4.8-12.5,0-17.3l-68.9-68.9c-4.8-4.8-12.5-4.8-17.3,0s-4.8,12.5,0,17.3l48,48H138.7c-6.8,0-12.3,5.5-12.3,12.3
-    			C126.4,252.1,131.9,257.5,138.7,257.5z" />
-            </g>
-        </g>
-    </svg>
-</ng-template>
+    </div>
+</div>
