--- a/src/app/components/pages/about-page/about-page.component.scss
+++ b/src/app/components/pages/about-page/about-page.component.scss
@@ -1,72 +1,7 @@
-.presentation {
-    // display: none;
-    height: 100%;
-    background-image: url(../../../../assets/images/me_day_righted.jpg);
-    background-size: cover;
-    background-color: var(--color-primary);
-    background-blend-mode: multiply;
-    background-position-x: right;
-    background-position-y: top;
-    position: relative;
-    overflow: hidden;
-    .spotlight {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 20dvw;
-        aspect-ratio: 1;
-        background-color: var(--color-secondary);
-        border-radius: 50%;
-        box-shadow: var(--color-secondary) 0px 0px 40px 40px;
-        mix-blend-mode: soft-light;
-        pointer-events: none;
-        transition: all .15s;
-    }
-}
-
-.content {
-    padding: 96px 112px 96px 112px;
-    color: var(--color-secondary);
-    height: 100%;
-    width: 50dvw;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-end;
-    text-align: right;
-    line-height: 1.5;
-}
-
-.name {
-    font-size: xx-large;
-    font-weight: 800;
-}
-
-.job {
-    margin-top: 8px;
-    font-size: x-large;
-    font-weight: 600;
-    color: var(--color-accent);
-}
-.speech {  
-    font-weight: 300;
-    text-align: justify;
-}
-
-.actions {
-    font-weight: 800;
-}
-.action {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-}
-
-
 .interests {
     height: 100%;
     background-color: var(--color-accent);
-    padding: 2em;
+    padding: 1rem;
     scroll-snap-align: start;
 
 }
@@ -84,17 +19,46 @@
 }
 .cards {
     // display: none;
+    // height: 80%;
     height: 80%;
+    // aspect-ratio: 43/50;
     // overflow: auto hidden;
     // text-align: center;
     // position: relative;
+    // display: grid;
+    // gap: .5rem;
+    // grid-auto-flow: column;
+    // grid-auto-rows: 100%;
+    // grid-auto-columns: min(18rem, 100%);
+    // scroll-snap-type: x mandatory;
+    // grid-auto-columns: 50px;
+    // gap: 1rem;
 }
 
-
+.card-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    scroll-snap-align: start;
+    // width: 100%;
+    // height: 100%;
+}
 .card {
-    padding: 8px;
+    // padding: 8px;
+    // display: inline;
+    // height: 100%;
+    // --card-height:
+    // $card-height: 0px
+    // min-width: 10rem;
+    // scroll-snap-align: center;
+    padding: 1rem;
+    // height: 100%;
+    // width: 100%;
+    // scroll-behavior: auto;
+    aspect-ratio: 43/50;
 
-    width: 100%;
+    // display: block;
+    // width: auto;
     
 }
 
@@ -167,6 +131,25 @@
 }
 
 .footer {
-    background-color: var(--color-secondary);
+    background-color: var(--color-primary);
     height: 25%;
+}
+
+.p {
+    display: inline-flex;
+    width: 500px;
+    height: 100%;
+    // >*{
+    //     flex: 1;
+    // }
+}
+
+.c1 {
+    background-color: indianred;
+    // flex-basis: 0%;
+    width: min-content;
+}
+.c2 {
+    background-color: turquoise;
+    width: 200px;
 }
