--- a/src/app/components/ui/card/card.component.html
+++ b/src/app/components/ui/card/card.component.html
@@ -1,8 +1,11 @@
-<div class="main-content">
-    <div class="image-container">
-        <img class="image" [src]="data.imageUrl" alt="ILLUSTRATION">
-    </div>
-    <p class="heading">{{data.heading}}</p>
-    <p class="details">{{data.details}}</p>
-    <app-button class="read-more">Read More</app-button>
+<div class="wrapper">
+    <img class="image" [src]="data.imageUrl" alt="ILLUSTRATION" [style.--img-aspect-ratio]="data.imageAspectRatio"
+        [style.--img-height]="data.imageHeight" draggable="false">
+    <h1 class="heading">{{data.heading}}</h1>
+    <p class="details" appClampLines>{{data.details}}</p>
+    <span class="read-more">
+        <a>
+            <fa-icon [icon]="['fas', 'info-circle']"></fa-icon>
+        </a>
+    </span>
 </div>
