--- a/src/app/components/ui/card/card.component.scss
+++ b/src/app/components/ui/card/card.component.scss
@@ -1,54 +1,65 @@
-.main-content {
-    display: flex;
+$card-height: var(--card-height, 20rem);
+$card-width: var(--card-width, auto);
+
+$image-height: 35%;
+$heading-height: 3.5rem;
+$action-height: 3.5rem;
+$details-height: calc($card-height - $image-height - $heading-height - $action-height);
+
+:host {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+.wrapper {
+    display: inline-flex;
     flex-direction: column;
     padding: 1rem;
     background-color: var(--color-secondary);
     border-radius: 16px;
-    min-height: 10rem;
-    // min-width: 15rem;
-    aspect-ratio: 5/6;
-    text-align: left;
+    width: 100%;
+    height: 100%;
+    box-shadow: -.125rem .125rem 4px .125rem var(--color-primary);
 }
 
-.image-container {
-    border-radius: 16px;
-    background-color: var(--color-primary);
-    flex: 0 0 33%;
-    // height: 33%;
-    // width: 100%;
-    // flex-basis: 33%;
-    // flex-grow: 0;
-    // flex-shrink: 0;
-    // max-height: 33%;
-}
+
 .image {
-    display: none;
     background-color: var(--color-primary);
-    padding: 16px;
+    padding: .25rem;
     object-fit: contain;
-    object-position: center;
-    min-width: 100%;
-    min-height: 0%;
-    flex: 0 0 33%;
+    width: 100%;
+    height: var(--img-height, auto);
+    aspect-ratio: var(--img-aspect-ratio);
+    border-radius: 16px;
+    overflow: hidden;
+    flex: 1;
+    display: block;
 }
+
 
 .heading {
-    font-size: larger;
+    font-size: 1.5rem;
     font-weight: 700;
     color: var(--color-primary);
-    margin-top: 36px;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: .25rem;
+    flex: 0 1 $heading-height;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
 }
 
+
 .details {
+    // pad
     font-size: small;
-    margin-top: 8px;
+    overflow: hidden;
     flex: 1;
 }
 
 .read-more {
     text-align: right;
-    margin-top: 24px;
-    font-size: small;
-    font-weight: 500;
-    color: var(--color-secondary);
+    padding: 1rem 1rem 0rem 1rem;
+    flex: 0 1 $action-height;
+    font-size: calc($action-height - 1rem); //minus top padding
 }
