--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@ a {
     transition: all .3s;
     color: inherit;
     text-decoration: none;
+    cursor: pointer;
 }
 
 a:hover{
@@ -34,4 +35,13 @@ button {
     cursor: pointer;
     border: none;
     background: none;
+}
+
+.app-clamp-lines {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: var(--max-lines, 1);
+    line-clamp: var(--max-lines, 1);
+    overflow: hidden;
+    clip-path: inset(0% 0% calc(100% - var(--cropped-height)) 0%);
 }
