Footer + improvements on the about section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,7 @@
     <div class="page-content">
         <router-outlet></router-outlet>
     </div>
+    <footer>
+        <app-footer></app-footer>
+    </footer>
 </div>
