--- a/src/app/components/pages/about-page/about-page.component.html
+++ b/src/app/components/pages/about-page/about-page.component.html
@@ -24,12 +24,43 @@
             <app-card [data]="card"></app-card>
         </div>
     </div> -->
-</div>
+<!-- </div> -->
 
-<div class="footer">
+<!-- <div class="footer">
     <div class="p">
         <div class="c1">def Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ratione ipsa numquam mollitia, eum veniam? Consectetur illum architecto deserunt animi repellat commodi, corrupti, voluptates omnis perspiciatis dolores fugiat distinctio temporibus iste eos explicabo. Ad quisquam vero similique repellat aliquam, alias nobis, accusamus facilis esse, necessitatibus ea! Ad ducimus asperiores repudiandae.</div>
-        <!-- <div class="c2">ghijklmnop</div> -->
+
+        <div class="c1">
+            abcdefghijklmnabcdefghijklmn
+        </div>
+        <div class="c2">
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            <span>aa</span>
+            ghijklmnopqrstuvwxyz
+        </div> 
 
     </div>
+</div> -->
+
+<!-- <div class="testing">
+    <div class="t1"></div>
+    <div class="t2"></div>
+    <div class="t3"></div>
+    <div class="t4"></div>
 </div>
+
+<div class="arg">
+    abc defg hijklmn
+</div> -->
