--- a/src/styles/themes/blue-theme-light.scss
+++ b/src/styles/themes/blue-theme-light.scss
@@ -1,8 +1,8 @@
 [data-theme="blue-theme-light"]{
-    --color-primary: #03045e ;
-    --color-secondary: #f1f2f6 ;
-    --color-accent: #a40606 ;
-    --color-tertiary: #ffba08;
+    // --color-primary: #03045e ;
+    // --color-secondary: #f1f2f6 ;
+    // --color-accent: #a40606 ;
+    // --color-tertiary: #ffba08;
 
     // --color-primary:  #0f38ab;
     // --color-secondary:  #fffdfa ;
@@ -10,8 +10,8 @@
     // --color-tertiary: #ffba08;
 
 
-    // --color-primary:  #e5b834;
-    // --color-secondary:  #131228 ;
+    // --color-primary:   #131228;
+    // --color-secondary:   #8a6f1c;
     // --color-accent: #eb4200;
     // --color-tertiary: #f67031;
 
