--- a/src/app/components/features/infinite-scroller/infinite-scroller.component.scss
+++ b/src/app/components/features/infinite-scroller/infinite-scroller.component.scss
@@ -1,14 +1,14 @@
 :host {
     display: block;
-    height: 100%;
+    height: min-content;
     position: relative;
 }
 .scroller-content {
     display: grid;
     grid-auto-flow: column;
     // grid-auto-columns: var(--elements-width);
-    grid-auto-rows: 100%;
-    height: 100%;
+    // grid-auto-rows: 100%;
+    height: min-content;
     overflow: auto hidden;
     // position: relative;
     scrollbar-width: none;
@@ -17,7 +17,7 @@
     cursor: grab;
     scroll-snap-type: x mandatory;
     user-select: none;
-    scroll-padding: 50%;
+    // scroll-padding: 50%;
 
     // gap: inherit;
     // position: relative;
