--- a/src/app/components/pages/about-page/about-page.component.scss
+++ b/src/app/components/pages/about-page/about-page.component.scss
@@ -1,8 +1,10 @@
 .interests {
+    // display: none;
     height: 100%;
-    background-color: var(--color-accent);
+    background: linear-gradient(45deg, var(--color-accent) 0%, var(--color-primary) 100%) ;
     padding: 1rem;
     scroll-snap-align: start;
+    container: interests / inline-size;
 
 }
 .interests-heading {
@@ -19,8 +21,8 @@
 }
 .cards {
     // display: none;
+    // height: 18rem;
     // height: 80%;
-    height: 80%;
     // aspect-ratio: 43/50;
     // overflow: auto hidden;
     // text-align: center;
@@ -40,8 +42,8 @@
     align-items: center;
     justify-content: center;
     scroll-snap-align: start;
-    // width: 100%;
-    // height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .card {
     // padding: 8px;
@@ -53,76 +55,16 @@
     // scroll-snap-align: center;
     padding: 1rem;
     // height: 100%;
-    // width: 100%;
+    width: 100%;
     // scroll-behavior: auto;
-    aspect-ratio: 43/50;
+    aspect-ratio: 47/50;
 
     // display: block;
     // width: auto;
+    // height: 10%;
     
 }
 
-// .card::before {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     height: 100%;
-//     width: 100%;
-//     content: "";
-//     opacity: 0;
-//     background: linear-gradient(90deg, var(--color-accent) 60%, var(--color-secondary));
-//     pointer-events: none;
-//     transition: all ease .5s;
-// }
-
-// .card::after {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     height: 100%;
-//     width: 100%;
-//     content: "";
-//     opacity: 0;
-//     background: linear-gradient(-90deg, var(--color-accent) 60%, var(--color-secondary));
-//     pointer-events: none;
-//     transition: all ease .5s;
-// }
-
-// .card-navs {
-//     height: 100%;
-// }
-// .card-nav-left {
-//     left: 0;
-//     height: 50%;
-// }
-
-// .card-left {
-//     left: var(--slot-left);
-//     // opacity: .75;
-//     transform: scale(.8);
-//     &::before {
-//         opacity: .9;
-//         pointer-events: all;
-//     }
-
-// }
-
-// .card-right {
-//     left: var(--slot-right);
-//     opacity: .75;
-//     transform: scale(.8);
-//     &::after {
-//         opacity: .9;
-//         pointer-events: all;
-//     }
-// }
-
-// .card-middle {
-//     transform: scale(1);
-//     opacity: 1;
-//     // pointer-events: all;
-//     z-index: 2;
-// }
 
 .right-arrow {
     color: var(--color-accent); 
@@ -133,23 +75,51 @@
 .footer {
     background-color: var(--color-primary);
     height: 25%;
+    display: inline;
 }
 
 .p {
-    display: inline-flex;
-    width: 500px;
-    height: 100%;
+    display: inline-block;
+    width: 300px;
+    // height: 100%;
+    // margin-left: 500px;
+    background-color: purple;
     // >*{
-    //     flex: 1;
+        // flex: 1;
     // }
 }
 
 .c1 {
     background-color: indianred;
     // flex-basis: 0%;
-    width: min-content;
+    // width: 10%;
+    // width: 50%;
+    display: inline-block;
+
 }
 .c2 {
     background-color: turquoise;
-    width: 200px;
+    // overflow: hidden;
+    display: inline-block;
+}
+
+
+.testing {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: repeat(auto-fit, minmax(3rem, 1fr));
+}
+
+.t1 {
+    background-color: blue;
+    height: 5rem;
+}
+.t2 {
+    background-color: red;
+}
+.t3 {
+    background-color: green;
+}
+.t4 {
+    background-color: black;
 }
