--- a/src/styles/themes/blue-theme-light.scss
+++ b/src/styles/themes/blue-theme-light.scss
@@ -10,15 +10,15 @@
     // --color-tertiary: #ffba08;
 
 
-    // --color-primary:   #131228;
-    // --color-secondary:   #8a6f1c;
-    // --color-accent: #eb4200;
-    // --color-tertiary: #f67031;
+    --color-primary:   #131228;
+    --color-secondary:   #f9b233;
+    --color-accent: #eb4200;
+    --color-tertiary: #f67031;
 
-    --color-primary: #2c2f4c ;
-    --color-secondary:   #daf2f6;
-    --color-accent:  #e95132;
-    --color-tertiary: #ffba08;
+    // --color-primary: #2c2f4c ;
+    // --color-secondary:   #daf2f6;
+    // --color-accent:  #e95132;
+    // --color-tertiary: #ffba08;
 
     // --color-primary: #433d8d ;
     // --color-secondary: #20aadf;
